utilities/stringify_attr/src/tests/derive/invalid_list.stderr
error: Expected a single item list
  --> $DIR/invalid_list.rs:20:11
   |
20 |         #[stringify(path = "a", path = "b")]
   |           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
